--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5.4.0",
     "@types/react": "^18.2.0",
-    "@types/node": "^20.5.9"
+    "@types/node": "^20.5.9",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   }
 }
