--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
+
 {
   "name": "tradex-estimating",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,15 +9,10 @@
   },
   "dependencies": {
     "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "typescript": "^5.4.0",
-    "@types/react": "^18.2.0",
-    "@types/node": "^20.5.9"
+    "typescript": "^5.0.0"
   }
 }
